fixed the structure

--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,10 @@
     "name": "Salesforce Accelerator",
     "version": "1.0",
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background/background.js"
     },
-    "action": {
-        "default_popup":"popup.html"
-    },
+    "action": {},
+    "options_page": "./options/options.html",
     "host_permissions": [
         "https://*.force.com/*"
     ],
@@ -18,12 +17,19 @@
     ],
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "js": ["./scripts/content.js"]
+            "matches": [
+                "<all_urls>"
+            ],
+            "js": [
+                "./content/hotkeys.js",
+                "./content/newRecord.js",
+                "./content/appLauncher.js",
+                "./content/content.js"
+            ]
         }
     ],
     "commands": {
-        "new_record": {
+        "newRecord": {
             "description": "Add New Record to current Object",
             "suggested_key": {
                 "linux": "Alt+N",
@@ -31,28 +37,12 @@
                 "windows": "Alt+N"
             }
         },
-        "app_launcher": {
-            "description":"Open App Launcher",
+        "openAppLauncher": {
+            "description": "Open App Launcher",
             "suggested_key": {
                 "linux": "Alt+A",
                 "mac": "Alt+A",
                 "windows": "Alt+A"
-            }
-        },
-        "open_setup": {
-            "description":"Open Setup",
-            "suggested_key": {
-                "linux": "Alt+S",
-                "mac": "Alt+S",
-                "windows": "Alt+S"
-            }
-        },
-        "open_dev_console": {
-            "description":"Open Dev Console",
-            "suggested_key": {
-                "linux": "Alt+C",
-                "mac": "Alt+C",
-                "windows": "Alt+C"
             }
         }
     },
