--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,12 @@
 {
     "manifest_version": 3,
     "name": "Salesforce Accelerator",
+    "icons":{
+        "16": "icon.png",
+        "32": "icon.png",
+        "48": "icon.png",
+        "128": "icon.png"
+    },
     "version": "1.0",
     "background": {
         "service_worker": "background/background.js"
