--- a/manifest.json
+++ b/manifest.json
@@ -23,9 +23,7 @@
     ],
     "content_scripts": [
         {
-            "matches": [
-                "<all_urls>"
-            ],
+            "matches": ["https://*.lightning.force.com/*", "https://*.my.salesforce.com/*"],
             "js": [
                 "./content/hotkeys.js",
                 "./content/newRecord.js",
